added configurable [USER].tasktype in the crab.cfg, savannah bug 76950

--- a/python/full_crab.cfg
+++ b/python/full_crab.cfg
@@ -229,6 +229,10 @@ publish_with_import_all_parents=0
 ### before attempting to get the output back. Default is 0 (=False)
 #dontCheckSpaceLeft = 1
 
+### This is the value of the activity reported in the dashboard.
+### Default value is analysis
+#tasktype = what_you_want  
+
 [GRID]
 
 ### To change the CMS-broker RB/WMS to be used. The ones available for CMS
