removing deprecated parameters, savannah bug #84082

--- a/python/full_crab.cfg
+++ b/python/full_crab.cfg
@@ -16,16 +16,17 @@
 jobtype = cmssw
 
 ### Specify the scheduler to be used.
-### Supported schedulers are : [ edg, glite, condor_g]
+### Supported schedulers are : [ glite, glidein, condor_g, caf, condor, arc, sge, pbs, lsf ]
 scheduler = glite
 
-### To configure CRAB  as client set the name of the server
+### To configure CRAB as client. Let CRAB select one of the available servers for you
+### CRAB will submit jobs to an available server, which will submit and manage for the users
+#use_server = 1
+
+### Only to debug propose, configure CRAB  as client and set the name of the server
 ### (e.g. pi, lnl etc etc )
 ### CRAB will submit jobs to the server, which will submit and manage for the users
 #server_name = cnaf
-
-### Let CRAB select one of the available servers for you
-#use_server = 1
 
 [CMSSW]
 
@@ -116,10 +117,6 @@ output_file = mcpool.root
 ### Dataset of PU to import in the local DBS for data publication
 #dataset_pu = /pileup/dataset/toimport
 
-### By default CRAB does not publish files with 0 event.
-### To publish them you have to select:
-#publish_zero_event=1
-
 # This setting is for experts only. See crab -help
 # split_by_event = 1
 
@@ -154,7 +151,7 @@ return_data = 1
 ### To copy the CMS executable output into a SE set copy_data = 1
 copy_data = 0
 
-### if you want to copy data in a "official CMS site"
+### if you want to copy data in a "official CMS site" (PhEDEx node)
 ### you have to specify the name as written in
 #storage_element = T2_IT_Bari
 ### the user_remote_dir will be created under the SE mountpoint
@@ -175,16 +172,14 @@ copy_data = 0
 ### directory or tree of directory under the mounpoint
 #user_remote_dir = name_directory_you_want
 
+################ DEPRECATED WITH EOS ########################
 ### if you are using CAF scheduler, you can specify the pool
 ### where to write your output. The default is cmscafuser
 #storage_pool = cmscafuser
+############################################################
 
 ### This is the storage port number. Default is 8443
 #storage_port = N
-
-### To specify the version of srm client to use. Should match managerv[x] above.
-### it can be srmv1 or srmv2
-#srm_version = srmv2
 
 ### To use the local stage out (local to the closeSE) in case of remote stage out failure.
 ### The publication of data is not supported with local_stage_out = 1. Work in progress
@@ -192,8 +187,7 @@ local_stage_out= 0
 
 ### To publish produced output in a local istance of DBS set publish_data = 1
 publish_data=0
-### To publish your data importing in your local DBS the complete parents three, set publish_with_import_all_parents=1
-publish_with_import_all_parents=0
+
 ### Specify the dataset name. The full path will be <primarydataset>/<publish_data_name>/USER
 #publish_data_name = yourDataName
 ### Specify the URL of DBS istance where CRAB has to publish the output files
@@ -229,17 +223,15 @@ publish_with_import_all_parents=0
 ### before attempting to get the output back. Default is 0 (=False)
 #dontCheckSpaceLeft = 1
 
-### This is the value of the activity reported in the dashboard.
+### This is the value of the activity reported in the dashboard (release: client 2_7_8 and server 1_1_4).
 ### Default value is analysis
 #tasktype = what_you_want  
 
 [GRID]
 
-### To change the CMS-broker RB/WMS to be used. The ones available for CMS
-### are "CERN" and "CNAF": the configuration
-### files needed to change the broker will be automatically downloaded from CRAB web page.
-### If the files are already present on the working directory they will be used.
-#rb = CNAF
+### Only with debug propose: to change the CMS-WMS to be used.
+### By default CRAB takes the needed configuration files from the cmsdoc page
+#rb = CERN
 
 ### To specify  VOMS role and/or group
 #role = superman
@@ -261,7 +253,7 @@ publish_with_import_all_parents=0
 #max_cpu_time = 60
 #max_wall_clock_time = 60
 
-### To manage White/Black lists: For discovery, please use http://cmslcgco01.cern.ch:8001/
+### To manage White/Black lists
 ### Use the dns domain (eg fnal, cern, ifae, fzk, cnaf, lnl,....) or the CMSSite name
 ### T1_US_FNAL. Only Tier2 centers have resources dedicated to user analysis.
 ### All the storage/computing elements (SE/CE) contained in the strings (comma separated list)
