changes about xrootd plugin,added caf_lfn parameter. Savannah #83930

--- a/python/full_crab.cfg
+++ b/python/full_crab.cfg
@@ -158,11 +158,17 @@ copy_data = 0
 ### in the case of publication this directory is not considered
 #user_remote_dir = name_directory_you_want
 
+
 ### if you want to copy your data at CAF
 #storage_element = T2_CH_CAF
 ### the user_remote_dir will be created under the SE mountpoint
 ### in the case of publication this directory is not considered
 #user_remote_dir = name_directory_you_want
+
+### at caf, you can decide in which mountpoint to copy your output, selecting the first part of LFN
+### default value is /store/caf/user
+### to test eos area you can use 
+#caf_lfn = /store/eos/user
 
 ### if you want to copy your data to your area in castor at cern
 ### or in a "not official CMS site" you have to specify the complete name of SE
