--- a/python/full_crab.cfg
+++ b/python/full_crab.cfg
@@ -15,6 +15,7 @@
 #
 jobtype = cmssw
 
+### test cvs
 ### Specify the scheduler to be used.
 ### Supported schedulers are : [ glite, glidein, condor_g, caf, condor, arc, sge, pbs, lsf ]
 scheduler = glite
